[gd_scene load_steps=12 format=3 uid="uid://bwfdiuwb3e23n"]

[ext_resource type="Script" uid="uid://h0p8d5j0kptn" path="res://Scripts/multiplayer_first_ui.gd" id="1_0diom"]
[ext_resource type="Texture2D" uid="uid://dx2jw5wvngpau" path="res://AssetBundle/Sprites/Background/bg1920_1080.png" id="1_4cbis"]
[ext_resource type="Texture2D" uid="uid://chqj67wdr3ypi" path="res://AssetBundle/Sprites/UI/back.svg" id="2_klaj4"]
[ext_resource type="FontFile" uid="uid://d3417cvdroklq" path="res://AssetBundle/Fonts/ZCOOL_Kuaile.ttf" id="3_1ij72"]
[ext_resource type="PackedScene" uid="uid://h66suetfy33j" path="res://Scenes/custom_dialog.tscn" id="5_jg5jl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssdc0"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ebsv"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_do1la"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ivgbo"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1pb4x"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyj5s"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="MultiplayerFirstUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0diom")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_4cbis")
metadata/_edit_lock_ = true

[node name="BackBtn" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 38.0
offset_right = 264.0
offset_bottom = 238.0
scale = Vector2(0.2, 0.2)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_klaj4")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 109.0
offset_top = 25.0
offset_right = 429.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1ij72")
theme_override_font_sizes/font_size = 80
text = "多人游戏"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -455.0
offset_top = -326.0
offset_right = 455.0
offset_bottom = 374.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 28

[node name="Nickname" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1ij72")
theme_override_font_sizes/font_size = 100
placeholder_text = "请输入你的昵称"

[node name="ServerAddress" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_1ij72")
theme_override_font_sizes/font_size = 100
text = "127.0.0.1"
placeholder_text = "房间地址"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="CreateRoomBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_1ij72")
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_ssdc0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1ebsv")
theme_override_styles/normal = SubResource("StyleBoxFlat_do1la")
text = "创建房间"

[node name="JoinRoomBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_1ij72")
theme_override_font_sizes/font_size = 100
theme_override_styles/hover = SubResource("StyleBoxFlat_ivgbo")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1pb4x")
theme_override_styles/normal = SubResource("StyleBoxFlat_gyj5s")
text = "加入房间"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_1ij72")
theme_override_font_sizes/font_size = 50
text = "说明：点击创建房间，不需要输入房间
地址，加入房间才需要填写房间地址

因为浏览器环境限制，暂不支持创建房间

房间号暂时只显示IPv4地址，IPv6地址请
到系统设置查看"

[node name="CustomDialog" parent="." instance=ExtResource("5_jg5jl")]
visible = false
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 502.0
offset_top = 532.0
offset_right = 1412.0
offset_bottom = 532.0

[node name="Label" parent="CustomDialog/ExitDialog" index="2"]
text = "昵称不能为空！"

[connection signal="pressed" from="BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CreateRoomBtn" to="." method="_on_create_room_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/JoinRoomBtn" to="." method="_on_join_room_btn_pressed"]
[connection signal="pressed" from="CustomDialog/ExitDialog/ConfirmExitBtn" to="." method="_on_confirm_exit_btn_pressed"]
[connection signal="pressed" from="CustomDialog/ExitDialog/CancelExitBtn" to="." method="_on_cancel_exit_btn_pressed"]

[editable path="CustomDialog"]
